Fixed post header spacing

--- a/sass/_posts.scss
+++ b/sass/_posts.scss
@@ -20,6 +20,8 @@
 	color: $green;
 	font-weight: 900;
 	border-bottom: 1px $grey solid;
+	margin-top: 10px;
+	margin-bottom: 35px;
 }
 
 .sidebar{
@@ -77,7 +79,7 @@
 
 .kicker{
 	@include header;
-	margin-top: 20px;
+	margin-top: 35px;
 	font-size: 1.5em;
 	width: 100%;
 }
